--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,52 +1,36 @@
 
-<head>
-  <!-- <title>Website</title> -->
-  <title><%= yield :page_title %></title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
-</head>
-<div class="limiter">
-  <div class="container-login100" style="background-image: url('../assets/slider/1.jpg');">
-    <div class="wrap-login100">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
-        <div class="wrap-input100 validate-input" data-validate = "Enter username">
-          <%= f.text_field :full_name, placeholder:"Title", class:"input100"%>
-          <span class="focus-input100" data-placeholder=""></span>
+        <div class="form-group">
+          <label>Name *:</label>
+          <%= f.text_field :full_name, class:"form-control"%>
         </div>
-        <div class="wrap-input100 validate-input" data-validate = "Enter username">
-          <%= f.text_field :email, placeholder:"Title", class:"input100"%>
-          <span class="focus-input100" data-placeholder=""></span>
+        <div class="form-group">
+          <label>Email *:</label>
+          <%= f.text_field :email, class:"form-control"%>
+  
         </div>
-        <div class="wrap-input100 validate-input" data-validate = "Enter username">
-          <%= f.file_field :avatar , placeholder:"Avatar", class:"input100"%>
-          <span class="focus-input100" data-placeholder=""></span>
+        
+        <div class="form-group">
+          <label>Change your Avatar:</label>
+          <%=f.file_field :avatar%>
         </div>
-        <div class="wrap-input100 validate-input" data-validate = "Enter new password">
-          <%= f.password_field :password, placeholder:"new password", class:"input100"%>
-          <span class="focus-input100" data-placeholder=""></span>
+        <div class="form-group">
+          <label>Current Password *:</label>
+          <%= f.password_field :current_password, class:"form-control"%>
         </div>
-        <div class="wrap-input100 validate-input" data-validate = "Confirm password">
-          <%= f.password_field :password_confirmation, placeholder:"new password", class:"input100"%>
-          <span class="focus-input100" data-placeholder=""></span>
+        <div class="form-group">
+          <label>New Password :</label>
+          <%= f.password_field :password, class:"form-control"%>
         </div>
-        <div class="wrap-input100 validate-input" data-validate = "Enter current password">
-          <%= f.password_field :current_password, placeholder:"Current password", class:"input100"%>
-          <span class="focus-input100" data-placeholder=""></span>
+        <div class="form-group">
+          <label>Confirm new password:</label>
+          <%= f.password_field :password_confirmation, class:"form-control"%>
         </div>
+        
         <div class="actions" >
-          <%= f.submit "Update", class:"login100-form-btn"%>
+          <%= f.submit "Update", class:"btn btn-success"%>
         </div>
    
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-    </div>
-  </div>
-</div>
