--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,82 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- <title>Website</title> -->
+  <title><%= yield :page_title %></title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+</head>
+<body>
+<div class="container">
+  <nav id="menu" class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="col-md-2">
+        <%= link_to root_path, class: "navbar-brand logo-header" do %>
+          <img src="/assets/logo.jpg" alt="logo">
+        <% end %>
+      </div>
+      <div class="col-md-10" id="bs-example-navbar-collapse-1 ">
+        <ul class="nav navbar-nav navbar-left">
+          <li><%= link_to "PC", game_game_list_of_platform_path, class: "page-scroll" %></li>
+          <li><%= link_to "PS4", game_game_list_of_platform_path(:platform => "PS4"), class: "page-scroll" %></li>
+          <li><%= link_to "XBox One", game_game_list_of_platform_path(:platform => "XBOX ONE"), class: "page-scroll" %></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#">MORE
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% platform_all = Platform.all %>
+              <% platform_all.each do |platform| %>
+                <% if platform.name != "PC" && platform.name != "PS4" && platform.name != "XBOX ONE" %>
+                  <li><%= link_to platform.name, game_game_list_of_platform_path(:platform => platform.name) %></li>
+                <% end %>
+              <% end %>
+            </ul>
+          </li>
+          <li>
+            <%= form_tag search_index_path, :method => 'get', :class => "navbar-form navbar-left", :rolze => "search" do %>
+              <div class="form-group">
+                <%= text_field_tag :search, params[:search], :value => "", :class => "form-control", placeholder: "search..." %>
+              </div>
+              <%= submit_tag "Search", name: nil, class: 'btn btn-default' %>
+            <% end %>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if user_signed_in? %>
+            <li class="dropdown">
+              <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#"><b><%= current_user.full_name %></b>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Profile", user_profile_home_path(id: current_user.id) %>
+                  <% if current_user.is_admin %>
+                  <li><%= link_to manage_path do %>Admin</a>
+                    <% end %></li>
+                <% end %>
+                <li><a href="#"><%= link_to('Sign Out', destroy_user_session_path, method: :delete) %> </a></li>
+              </ul>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to('Sign In', new_user_session_path) %>
+            </li>
+            <li>
+              <%= link_to('Sign Up', new_user_registration_path) %>
+            </li>
+          <% end %>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
+
+
 <div class="limiter">
   <div class="container-login100" style="background-image: url('../assets/slider/1.jpg');">
     <div class="wrap-login100">
