--- a/app/views/user_profile/home.html.erb
+++ b/app/views/user_profile/home.html.erb
@@ -35,7 +35,7 @@
                             <span>
                                 <h1 class="panel-title pull-left" style="font-size:30px;"><%=@user.full_name%> <small><%= @user.email%></small> <i class="fa fa-check text-success" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="John Doe is sharing with you"></i></h1>
                             </span>
-                            <%if @current_user.id == @user.id %>
+                            <%if user_signed_in? and @current_user.id == @user.id %>
                             <br><br><hr>
                             <%= link_to "#",
                                 data: {
@@ -47,7 +47,6 @@
                                 <% end %>
                                 <% end %>
                         <br>
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#editProfile">Edit</button>
                         </div>
                     </div>
                     
@@ -225,53 +224,6 @@
       <h3>Update user</h3>
     </div>
     <div class="modal-body"></div>
-  </div>
-</div>
-
-<div id="editProfile" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Update User</h4>
-      </div>
-      <div class="modal-body">
-        <form action="#">
-            <div class="form-group">
-                <label for="name">Name :</label>
-                <input type="text" class="form-control" id="name">
-            </div>
-            <div class="form-group">
-                <label for="email">Email address:</label>
-                <input type="email" class="form-control" id="email">
-            </div>
-            <div class="form-group">
-                <label for="file">Image:</label>
-                <input type="file" class="form-control" id="image">
-            </div>
-            <div class="form-group">
-                <label for="pwd">New Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Confirm Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Current Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <br>
-            <button type="submit" class="btn btn-success">Update</button>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
   </div>
 </div>
 
