--- a/app/views/search/advance_search.html.erb
+++ b/app/views/search/advance_search.html.erb
@@ -44,7 +44,7 @@
             <% @search_results.each do |game| %>
               <div class="col-md-12 fix-pading-content">
                 <div class="col-xs-12 col-md-4">
-                  <%=link_to game_detail_path(id: game.id) do %> <%= image_tag(game.photos.first.image, :class => "img-responsive fix-box-img-top-game") %><%end%>
+                  <%=link_to game_detail_path(id: game.id) do %> <%= image_tag(game.photos.first.image.url, :class => "img-responsive fix-box-img-top-game") %><%end%>
                 </div>
                 <div class="col-xs-12 col-md-8 content-game-home-page">
                   <div class="about-text col-md-12">
