--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -55,7 +55,7 @@ a {
 }
 a:hover, a:focus {
   text-decoration: none;
-  color: #e52f3c;
+  color: #ffffff !important;
 }
 ul, ol {
   list-style: none;
